Fixed issue with mixing GenaiLocator models and property models